tests/neg/applydynamic_sip.check
tests/neg/applydynamic_sip.scala:8: error: value applyDynamic is not a member of Dynamic(Test.qual)
possible cause: maybe a wrong Dynamic method signature?
  qual.sel(a, a2: _*) // error
  ^
tests/neg/applydynamic_sip.scala:9: error: applyDynamicNamed does not support passing a vararg parameter
  qual.sel(arg = a, a2: _*) // error
          ^
tests/neg/applydynamic_sip.scala:10: error: applyDynamicNamed does not support passing a vararg parameter
  qual.sel(arg, arg2 = "a2", a2: _*) // error
          ^
tests/neg/applydynamic_sip.scala:20: error: type mismatch:
 found   : String("sel")
 required: Int
  bad1.sel // error
      ^
tests/neg/applydynamic_sip.scala:21: error: type mismatch:
 found   : String("sel")
 required: Int
  bad1.sel(1) // error // error
      ^
tests/neg/applydynamic_sip.scala:21: error: method applyDynamic in class Bad1 does not take more parameters
  bad1.sel(1) // error // error
  ^
tests/neg/applydynamic_sip.scala:22: error: type mismatch:
 found   : String("sel")
 required: Int
  bad1.sel(a = 1) // error // error
      ^
tests/neg/applydynamic_sip.scala:22: error: method applyDynamicNamed in class Bad1 does not take more parameters
  bad1.sel(a = 1) // error // error
  ^
tests/neg/applydynamic_sip.scala:23: error: type mismatch:
 found   : String("sel")
 required: Int
  bad1.sel = 1 // error // error
      ^
tests/neg/applydynamic_sip.scala:23: error: method updateDynamic in class Bad1 does not take more parameters
  bad1.sel = 1 // error // error
  ^
tests/neg/applydynamic_sip.scala:32: error: method selectDynamic in class Bad2 does not take parameters
  bad2.sel // error
  ^
tests/neg/applydynamic_sip.scala:33: error: method applyDynamic in class Bad2 does not take parameters
  bad2.sel(1) // error
  ^
tests/neg/applydynamic_sip.scala:34: error: method applyDynamicNamed in class Bad2 does not take parameters
  bad2.sel(a = 1) // error
  ^
tests/neg/applydynamic_sip.scala:35: error: method updateDynamic in class Bad2 does not take parameters
  bad2.sel = 1 // error
  ^
14 errors found
